@@ -1,3 +1,7 @@
+2003-03-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
+	* network-conf.in, network.pl.in: added modem autodetection directive
+
 2003-03-13  Christian Neumair  <chris@gnome-de.org>
 
 	* .cvsignore: Updated.
